# GenAI_Meetings_Agent

./: .gitignore  README.md  meeting_agent.db  pyproject.toml  requirements.txt  sample_meeting_2024-01-11_notes.rtf  sample_meeting_2024-01-11_notes.txt
Example_outputs/: README.md  sample_meeting_2024-01-11_notes.docx  sample_meeting_2024-01-11_notes.md
meeting_agent/: __init__.py  database.py  docu_helper.py  helper.py  llm.py  retention_manager.py  sentiment_analyzer.py  streamlit_app.py
meeting_agent/prompt_gallery/: cli_qa_system_prompt.txt  cli_qa_user_prompt_template.txt  meeting_notes_system_prompt.txt  meeting_notes_user_prompt_template.txt  retention_policy_system_prompt.txt  retention_policy_user_prompt_template.txt  topic_extraction_system_prompt.txt  topic_extraction_user_prompt_template.txt
meeting_agent/scripts/: __init__.py  meeting_agent.py  meeting_cli.py  streamlit_launcher.py
scripts/: meeting_agent.py
